# cppTemplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format_count.sh
inc/: cppTemplate.h
src/: cppTemplate.cc  main.cc
test/: CMakeLists.txt
